--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "~8.2.14",
     "@capacitor/core": "2.1.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/qr-scanner": "^5.25.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "core-js": "^2.5.4",
     "firebase": "^7.14.3",
     "rxjs": "~6.5.1",
@@ -55,5 +57,10 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-qrscanner": {}
+    }
+  }
 }
